# desafio-bry

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: pipeline.yaml
include/: Constants.h  DocSignInfo.h  DocToSignature.h  RSAKey.h  Server.h
src/: DocSignInfo.cpp  DocSignInfo.cpp_bkp  DocToSignature.cpp  RSAKey.cpp  Server.cpp  main.cpp
